--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -7,7 +7,7 @@
 
 <body>
    <%- include('../includes/navigation.ejs') %>
-    <main>
+    <!-- <main> -->
         <!-- <form class="signup-form" action="/signup" method="POST" novalidate>
             <input type="hidden" name="_csrf" value="<%= csrfToken %>">
             <div class="form-control">
@@ -40,122 +40,118 @@
         <% if (errorMessage) { %>
             <div class="user-message user-message--error"><%= errorMessage %></div>
         <% } %> -->
+    <!-- </main> -->
 
+    <div class="limiter">
+        <div class="container-login100" style="background-image: linear-gradient(135deg, #2f1cbb, #0e3247)">
+            <div class="wrap-login100 p-l-55 p-r-55 p-t-65 p-b-54">
+                <form class="login100-form validate-form" action="/signup" method="POST" novalidate>
+                    
+                    <span class="login100-form-title p-b-49">
+                        Registrati
+                    </span>
 
-        <div class="limiter">
-            <div class="container-login100" style="background-image: linear-gradient(135deg, #2f1cbb, #0e3247)">
-                <div class="wrap-login100 p-l-55 p-r-55 p-t-65 p-b-54">
-                    <form class="login100-form validate-form" action="/signup" method="POST" novalidate>
-                        
-                        <span class="login100-form-title p-b-49">
-                            Registrati
-                        </span>
-    
-                        <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+                    <input type="hidden" name="_csrf" value="<%= csrfToken %>">
 
-                        <div class="wrap-input100 validate-input m-b-23" data-validate = "Username is reauired">
-                            <span class="label-input100">Username</span>
-                            <input
-                                <% if (validationErrors.find(e => e.param == 'usrName')) { %>
-                                    style="border: 1px solid #a50000;"
-                                <% } %>
-                                class="input100"
-                                placeholder="Type your Username"
-                                type="string" name="usrName" id="usrName" value="<%= oldInput.usrName %>"
-                            >
-                            <span class="focus-input100" data-symbol="&#xf206;"></span>
-                        </div>
-
-                        
-                        <div class="wrap-input100 validate-input m-b-23" data-validate = "Username is reauired">
-                            <span class="label-input100">E-mail</span>
-                            <input
-                                <% if (validationErrors.find(e => e.param == 'email')) { %>
-                                    style="border: 1px solid #a50000;"
-                                <% } %>
-                                class="input100"
-                                placeholder="Type your e-mail"
-                                type="email" name="email" id="email" value="<%= oldInput.email %>"
-                            >
-                            <span class="focus-input100" data-symbol="&#xf206;"></span>
-                        </div>
-    
-                        <div class="wrap-input100 validate-input" data-validate="Password is required">
-                            <span class="label-input100">Password</span>
-                            <input 
-                                <% if (validationErrors.find(e => e.param == 'password')) { %>
-                                    style="border: 1px solid #a50000;"
-                                <% } %>
-                                class="input100"
-                                placeholder="Type your password"
-                                type="password" name="password" id="password" value="<%= oldInput.password %>"
-                            >
-                            <span class="focus-input100" data-symbol="&#xf190;"></span>
-                        </div>
-
-                        <div class="wrap-input100 validate-input" data-validate="Password is required">
-                            <span class="label-input100">Confirm Password</span>
-                            <input 
-                                <% if (validationErrors.find(e => e.param == 'confirmPassword')) { %>
-                                    style="border: 1px solid #a50000;"
-                                <% } %>
-                                class="input100"
-                                placeholder="Confirm your password"
-                                type="password" name="confirmPassword" id="confirmPassword" value="<%= oldInput.confirmPassword %>"
-                            >
-                            <span class="focus-input100" data-symbol="&#xf190;"></span>
-                        </div>
-                        
-                        <br>
-                        <br>
-                        <!-- <div class="text-right p-t-8 p-b-31">
-                            <a href="#">
-                                Forgot password?
-                            </a>
-                        </div> -->
-                        
-                        <div class="container-login100-form-btn">
-                            <div class="wrap-login100-form-btn">
-                                <div class="login100-form-bgbtn"></div>
-                                <button class="login100-form-btn">
-                                    Registrati
-                                </button>
-                            </div>
-                        </div>
-    
-                        <div class="txt1 text-center p-t-54 p-b-20">
-                            <span>
-                                Or Sign Up Using
-                            </span>
-                        </div>
-    
-                        <div class="flex-c-m">
-                            <a href="#" class="login100-social-item bg1">
-                                <i class="fa fa-facebook"></i>
-                            </a>
-    
-                            <a href="#" class="login100-social-item bg2">
-                                <i class="fa fa-twitter"></i>
-                            </a>
-    
-                            <a href="/login/federated/google" class="login100-social-item bg3">
-                                <i class="fa fa-google"></i>
-                            </a>
-                        </div>
-    
-                        <div class="flex-c-m p-t-54">
-                            <% if (errorMessage) { %>
-                                <div class="popout error-message"><%= errorMessage %></div>
+                    <div class="wrap-input100 validate-input m-b-23" data-validate = "Username is reauired">
+                        <span class="label-input100">Username</span>
+                        <input
+                            <% if (validationErrors.find(e => e.param == 'usrName')) { %>
+                                style="border: 1px solid #a50000;"
                             <% } %>
+                            class="input100"
+                            placeholder="Type your Username"
+                            type="string" name="usrName" id="usrName" value="<%= oldInput.usrName %>"
+                        >
+                        <span class="focus-input100" data-symbol="&#xf206;"></span>
+                    </div>
+
+                    
+                    <div class="wrap-input100 validate-input m-b-23" data-validate = "Username is reauired">
+                        <span class="label-input100">E-mail</span>
+                        <input
+                            <% if (validationErrors.find(e => e.param == 'email')) { %>
+                                style="border: 1px solid #a50000;"
+                            <% } %>
+                            class="input100"
+                            placeholder="Type your e-mail"
+                            type="email" name="email" id="email" value="<%= oldInput.email %>"
+                        >
+                        <span class="focus-input100" data-symbol="&#xf206;"></span>
+                    </div>
+
+                    <div class="wrap-input100 validate-input m-b-23" data-validate="Password is required">
+                        <span class="label-input100">Password</span>
+                        <input 
+                            <% if (validationErrors.find(e => e.param == 'password')) { %>
+                                style="border: 1px solid #a50000;"
+                            <% } %>
+                            class="input100"
+                            placeholder="Type your password"
+                            type="password" name="password" id="password" value="<%= oldInput.password %>"
+                        >
+                        <span class="focus-input100" data-symbol="&#xf190;"></span>
+                    </div>
+
+                    <div class="wrap-input100 validate-input" data-validate="Password is required">
+                        <span class="label-input100">Confirm Password</span>
+                        <input 
+                            <% if (validationErrors.find(e => e.param == 'confirmPassword')) { %>
+                                style="border: 1px solid #a50000;"
+                            <% } %>
+                            class="input100"
+                            placeholder="Confirm your password"
+                            type="password" name="confirmPassword" id="confirmPassword" value="<%= oldInput.confirmPassword %>"
+                        >
+                        <span class="focus-input100" data-symbol="&#xf190;"></span>
+                    </div>
+                    
+                    <br>
+                    <br>
+                    <!-- <div class="text-right p-t-8 p-b-31">
+                        <a href="#">
+                            Forgot password?
+                        </a>
+                    </div> -->
+                    
+                    <div class="container-login100-form-btn">
+                        <div class="wrap-login100-form-btn">
+                            <div class="login100-form-bgbtn"></div>
+                            <button class="login100-form-btn">
+                                Registrati
+                            </button>
                         </div>
-    
-                      
-                    </form>
-                </div>
+                    </div>
+
+                    <div class="flex-c-m p-t-54">
+                        <% if (errorMessage) { %>
+                            <div class="popout error-message"><%= errorMessage %></div>
+                        <% } %>
+                    </div>
+
+                    <div class="txt1 text-center p-t-54 p-b-20">
+                        <span>
+                            Or Sign Up Using
+                        </span>
+                    </div>
+
+                    <div class="flex-c-m">
+                        <a href="#" class="login100-social-item bg1">
+                            <i class="fa fa-facebook"></i>
+                        </a>
+
+                        <a href="#" class="login100-social-item bg2">
+                            <i class="fa fa-twitter"></i>
+                        </a>
+
+                        <a href="/login/federated/google" class="login100-social-item bg3">
+                            <i class="fa fa-google"></i>
+                        </a>
+                    </div>
+                    
+                </form>
             </div>
         </div>
-
-
-    </main>
+    </div>
     
 <%- include('../includes/end.ejs') %>
