--- a/views/user/edit-match.ejs
+++ b/views/user/edit-match.ejs
@@ -1,47 +1,91 @@
 <%- include('../includes/head.ejs') %>
     <link rel="stylesheet" href="/css/forms.css">
     <link rel="stylesheet" href="/css/match.css">
+    <link rel="stylesheet" href="/css/add-match.css">
+    
 </head>
 
-<body>
-    <%- include('../includes/navigation.ejs') %>
-    <main>
-        <form class="match-form" action="/<% if (editing) { %>edit-match<% } else { %>add-match<% } %>" method="POST">
-            <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-            <div class="form-control">
-                <label for="title">Title</label>
-                <input type="text" name="title" id="title" value="<% if (editing) { %><%= match.title %><% } %>">
-            </div>
-            <div class="form-control">
-                <label for="title">Place</label>
-                <input type="text" name="placeName" id="placeName" value="<% if (editing) { %><%= match.placeName %><% } %>">
-            </div>
-            <div class="form-control">
-                <label for="title">Address</label>
-                <input type="text" name="address" id="address" value="<% if (editing) { %><%= match.address %><% } %>">
-            </div>
-            <div class="form-control">
-                <label for="title">When?</label>
-                <input type="datetime-local" name="time" id="time" value="<% if (editing) { %><%= match.time %><% } %>">
-            </div>
-            <div class="form-control">
-                <label for="title">N. of players</label>
-                <input type="text" name="totalPlayers" id="totalPlayers"value="<% if (editing) { %><%= match.totalPlayers %><% } %>">
-            </div>
-            <div class="form-control">
-                <label for="price">Price</label>
-                <input type="number" name="price" id="price" step="0.01" value="<% if (editing) { %><%= match.price %><% } %>">
-            </div>
-            <div class="form-control">
-                <label for="description">Description</label>
-                <textarea name="description" id="description" rows="5"><% if (editing) { %><%= match.description %><% } %></textarea>
-          
-            <% if (editing) { %>
-                <input type="hidden" value="<%= match._id %>" name="matchId">
-            <% } %>
 
-            <button class="btn" type="submit"><% if (editing) { %>Update Match<% } else { %>Add Match<% } %></button>
-        </form>
+<script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+<script>
+    function showDate() {
+        let matchDate = document.getElementById("time");
+        matchDate.type = "datetime-local"
+    }
+</script>
+
+<body>
+   <%- include('../includes/navigation.ejs') %>
+    <main>
+        
+        <div class="container">
+            <div class="card">
+                <h2 class="card-heading">
+                    Create your match!
+                </h2>
+                <lottie-player src="https://assets1.lottiefiles.com/packages/lf20_VB3ALHSv6V.json"  background="transparent"  speed="0.2"  style="width: auto; height: auto;"  loop  autoplay></lottie-player>
+                <form class="card-form" action="/<% if (editing) { %>edit-match<% } else { %>add-match<% } %>" method="POST">
+                    <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+        
+                    <div class="input">
+                        <input type="text" class="input-field" name="title" id="title" value="<% if (editing) { %><%= match.title %><% } %>" required/>
+                        <label class="input-label">Titolo della partita</label>
+                    </div>
+                    <div class="input">
+                        <input type="text" class="input-field" name="placeName" id="placeName" value="<% if (editing) { %><%= match.placeName %><% } %>" required />
+                        <label class="input-label">Luogo</label>
+                    </div>
+
+                    <div class="input">
+                        <input type="text" class="input-field" name="address" id="address" value="<% if (editing) { %><%= match.address %><% } %>" required />
+                        <label class="input-label">Indirizzo</label>
+                    </div>
+                    <div class="input">
+                        <input onclick="showDate()" class="input-field" name="time" id="time" value="<% if (editing) { %><%= match.time %><% } %>" required/>
+                        <label class="input-label">Quando?</label>
+                    </div>
+
+                    <div class="input">
+                        <input type="text" class="input-field" name="totalPlayers" id="totalPlayers" value="<% if (editing) { %><%= match.totalPlayers %><% } %>" required />
+                        <label class="input-label">Numero di giocatori</label>
+                    </div>
+                    <div class="input">
+                        
+                        <input type="number" class="input-field" name="price" id="price"  value="<% if (editing) { %><%= match.price %><% } %>" step="0.50" required>
+                        <label class="input-label">Prezzo</label>
+                    </div>
+                    
+                    <div class="input">
+                        
+                        <!-- <textarea class="input-field" name="description" id="description" rows="5"></textarea> -->
+                        <input type="text" class="input-field" name="description" id="description" value="<% if (editing) { %><%= match.description %><% } %>" required/>
+                        <label class="input-label">Descrizione</label>
+
+                        
+                    </div>
+
+                    <% if (editing) { %>
+                        <input type="hidden" value="<%= match._id %>" name="matchId">
+                    <% } %>
+                    
+
+                    <div class="action">
+                        <button class="action-button" type="submit" ><% if (editing) { %>Update Match<% } else { %>Add Match<% } %></button>
+                    </div>
+
+                    <br>
+                </form>
+                
+            </>
+        </div>
+
+
+        
+        <script>today = new Date().toISOString().split(":")[0]+":00";
+            document.getElementById("time").setAttribute("min",today)
+        </script>
+
     </main>
+</body>    
 
 <%- include('../includes/end.ejs') %>
