--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -17,13 +17,17 @@
 						<div class="flex-c-m">
 							<div class="popout error-message"><%= errorMessage %></div>
                         </div>
+					<% } else if (message) { %>
+						<div class="flex-c-m">
+							<div class="popout message"><%= message %></div>
+                        </div>
 					<% } %>
 					<div class="wrap-input100 validate-input m-b-23">
 						<span class="label-input100">E-mail</span>
 						<input
 							class="<%= (errorMessage) ? 'input100-invalid' : 'input100' %>"
                             placeholder="Type your e-mail" required
-                            type="email" name="email" id="email" value="<%= oldInput.email %>">
+                            type="email" name="email" id="email" value="<%= (errorMessage) ? oldInput.email : '' %>">
 						<span class="focus-input100" data-symbol="&#xf206;"></span>
 					</div>
 					<div class="wrap-input100 validate-input">
@@ -31,7 +35,7 @@
 						<input 
 							class="<%= (errorMessage) ? 'input100-invalid' : 'input100' %>"
                             placeholder="Type your password" required
-                            type="password" name="password" id="password" value="<%= oldInput.password %>">
+                            type="password" name="password" id="password" value="<%= (errorMessage) ? oldInput.password : '' %>">
 						<span class="focus-input100" data-symbol="&#xf190;"></span>
 					</div>
                     <br>
